[package]
name        = "rge-kernel-ecs"
description = "RGE Tier-1 kernel substrate: entity/component/system ECS substrate"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish                = false

[dependencies]
ulid.workspace      = true
thiserror.workspace = true
tracing.workspace   = true
serde               = { workspace = true }
postcard            = { workspace = true }
rge-kernel-diagnostics = { workspace = true }

[lints]
workspace = true
